[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/ui/startup/Startup.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/font/ArizoneUnicaseRegular-5dRZ.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_space = -9
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 14
extra_spacing_char = 3
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
extra_spacing_char = 3
font_data = SubResource( 5 )

[node name="Startup" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 476.0
custom_constants/separation = 82

[node name="WiosLabel" type="Label" parent="VBox"]
margin_right = 824.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "WASTED IN OUTTA SPACE"
align = 1

[node name="VBox" type="VBoxContainer" parent="VBox"]
margin_top = 128.0
margin_right = 824.0
margin_bottom = 223.0
custom_constants/separation = 15

[node name="WarningLabel" type="Label" parent="VBox/VBox"]
margin_right = 824.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1

[node name="Margin" type="MarginContainer" parent="VBox/VBox"]
margin_top = 32.0
margin_right = 824.0
margin_bottom = 95.0
custom_constants/margin_right = 250
custom_constants/margin_left = 250

[node name="VBox" type="VBoxContainer" parent="VBox/VBox/Margin"]
margin_left = 250.0
margin_right = 574.0
margin_bottom = 63.0
custom_constants/separation = 7

[node name="LineEdit" type="LineEdit" parent="VBox/VBox/Margin/VBox"]
margin_right = 324.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
align = 1
max_length = 24
context_menu_enabled = false
placeholder_text = "enter a username"

[node name="Margin" type="MarginContainer" parent="VBox/VBox/Margin/VBox"]
margin_top = 37.0
margin_right = 324.0
margin_bottom = 63.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="SaveButton" type="Button" parent="VBox/VBox/Margin/VBox/Margin"]
margin_left = 132.0
margin_right = 191.0
margin_bottom = 26.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBox/VBox/Margin/VBox/Margin/SaveButton" to="." method="_on_SaveButton_pressed"]
